feat: module configuration system